--- a/_includes/education.html
+++ b/_includes/education.html
@@ -24,7 +24,7 @@
             <br>
             Research Intern
             <br> 
-            Topic: Assisting radiotheraphy planning via deep nueral networks
+            Topic: Assisting radiotherapy planning via deep neural networks
             <br>
             Advisor: <a href="https://scholar.google.com/citations?user=RaqG37kAAAAJ&hl=zh-CN">Prof. Yi Zhang</a> 
           </div>
