--- a/_includes/module.html
+++ b/_includes/module.html
@@ -1,110 +1,139 @@
+
+
+<style>	
+  .table {
+    display: table;
+    table-layout: fixed;
+  }
+  .table-cell {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+  }
+</style>
 \* indicates equal contribution
 
+<div class="table">
+    <div class="table-cell" width="200px">
+      <img src="/assets/img/arxiv.png" alt="" style="max-width:200px;">
+    </div>
+    <div style="padding-left: 1em ;">
+      <div>
+        <strong>Medical Visual Question Answering via Contrastive Learning and Conditional Reasoning</strong>
+      </div>
+      <div style= "padding-top: 3px;">
+        <strong>Bo Liu</strong>, Liming Zhan, Xiaoming Wu
+      </div>
+      <div style= "padding-top: 3px;">
+        <i>Under Review</i> in IEEE Transaction on Medical Imaging, TMI
+        <br>
+        [<a>PDF</a>] [<a>Code</a>] 
+      </div>
+    </div>
+</div>
 
 
-<div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="/assets/img/arxiv.png" height="120" width="200" alt="">
+
+<div class="table" style="padding-top: 15px;">
+    <div class="table-cell" width="200px">
+        <img src="/assets/img/arxiv.png" alt="" style="max-width:200px;">
     </div>
-    <div style="padding-left: 10em ;">
-      <strong>Medical Visual Question Answering via Contrastive Learning and Conditional Reasoning
-      </strong>
-      <br>
-      <strong>Bo Liu</strong>, Liming Zhan, Xiaoming Wu
-      <br>
-      <i>Under Review</i> in IEEE Transaction on Medical Imaging, TMI
-      <br>
-      [<a>PDF</a>] [<a>Code</a>] 
-    </div>
+    <div style="padding-left: 1em ;">
+      <div>
+        <strong>Improving Personalized Product Search with Text Enrichment and Graph Convolution</strong>
+      </div>
+      <div style= "padding-top: 3px;">
+        Lu Fan, Qimai Li, <strong>Bo Liu</strong>, Xiaoming Wu
+      </div>
+      <div style= "padding-top: 3px;">
+        <i>Under Review</i> in International Conference on Data Mining, ICDM 2021
+        <br>
+        [<a>PDF</a>] [<a>Code</a>]
+      </div>
   </div>
+</div>
 
 
 
-  <div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="/assets/img/arxiv.png" height="120" width="200" alt="">
-    </div>
-    <div style="padding-left: 10em ;">
-      <strong>Improving Personalized Product Search with Text Enrichment and Graph Convolution.
-        </strong>
-      <br>
-      Lu Fan, Qimai Li, <strong>Bo Liu</strong>, Xiaoming Wu
-      <br>
-      <i>Under Review</i> in International Conference on Data Mining, ICDM 2021
-      <br>
-      [<a>PDF</a>] [<a>Code</a>] 
-    </div>
+<div class="table" style="padding-top: 15px;">
+  <div class="table-cell" width="200px">
+    <img src="assets/img/cprd.png" alt="" style="max-width:200px;">
   </div>
-
-
-
-  <div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="assets/img/cprd.png" height="130" width="200" alt="">
-    </div>
-    <div style="padding-left: 10em ;">
+  <div style="padding-left: 1em ;">
+    <div>
       <strong>Contrastive Pre-training and Representation Distillation for Medical Visual Question Answering Based on Radiology Images</strong>
-      <br>
+    </div>
+    <div style= "padding-top: 3px;">
       <strong>Bo Liu</strong>, Liming Zhan, Xiaoming Wu
-      <br>
+    </div>
+    <div style= "padding-top: 3px;">
       International Conference on Medical Image Computing and Computer Assisted Intervention. <strong>MICCAI 2021</strong>
       <br>
       [<a>PDF</a>] [<a>Code</a>] 
     </div>
   </div>
+</div>
 
 
 
-  <div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="assets/img/oos.png" height="120" width="200" alt="">
+<div class="table" style="padding-top: 15px;">
+  <div class="table-cell" width="200px">
+    <img src="assets/img/oos.png" alt="" style="max-width:200px; height: 120px;">
+  </div>
+  <div style="padding-left: 1em ;">
+    <div>
+      <strong>Intent Detection with Self-Supervision and Discriminative Training</strong>
     </div>
-    <div style="padding-left: 10em ;">
-      <strong>Intent Detection with Self-Supervision and Discriminative Training</strong> 
-      <br>
+    <div style= "padding-top: 3px;">
       Liming Zhan, Haowen Liang*, <strong>Bo Liu*</strong>, Lu Fan, Xiaoming Wu, Albert Y.S. Lam
-      <br>
+    </div>
+    <div style= "padding-top: 3px;">
       Annual Meeting of the Association for Computational Linguistics. <strong> ACL 2021 </strong>
       <br>
       [<a href="assets/papers/ACL-2021-OOS.pdf">PDF</a>] [<a href="https:// github.com/liam0949/DCLOOS">Code</a>] <strong><i style="color:#e74d3c">Long Paper, Oral Presentation</i></strong>
     </div>
   </div>
+</div>
 
 
-
-  <div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="/assets/img/slake.png" height="130" width="200" alt="">
+<div class="table" style="padding-top: 15px;">
+  <div class="table-cell" width="200px">
+    <img src="/assets/img/slake.png" alt="" style="max-width:200px;">
+  </div>
+  <div style="padding-left: 1em ;">
+    <div>
+      <strong>SLAKE: A Semantically-Labeled Knowledge-Enhanced Dataset for Medical Visual Question Answering</strong> 
     </div>
-    <div style="padding-left: 10em ;">
-      <strong>SLAKE: A Semantically-Labeled Knowledge-Enhanced Dataset for Medical Visual Question Answering
-     </strong> 
-      <br>
+    <div style= "padding-top: 3px;">
       <strong>Bo Liu</strong>, Liming Zhan, Li Xu, Lin Ma, Yan Yang, Xiaoming Wu
-      <br>
+    </div>
+    <div style= "padding-top: 3px;">
       IEEE International Symposium on Biomedical Imaging. <strong> ISBI 2021 </strong>
       <br>
       [<a href="assets/papers/ISBI-2021-SLAKE.pdf">PDF</a>] [<a href="https://www.med-vqa.com">Dataset</a>] <strong><i style="color:#e74d3c"> Oral Presentation</i></strong>
     </div>
   </div>
+</div>
 
 
-
-  <div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-      <img src="/assets/img/cr.png" height="120" width="200" alt="">
+<div class="table" style="padding-top: 15px;">
+  <div class="table-cell" width="200px">
+    <img src="/assets/img/cr.png" alt="" style="max-width:200px;">
+  </div>
+  <div style="padding-left: 1em ;">
+    <div>
+      <strong>Medical Visual Question Answering via Conditional Reasoning</strong> 
     </div>
-    <div style="padding-left: 10em ;">
-      <strong>Medical Visual Question Answering via Conditional Reasoning
-     </strong> 
-      <br>
+    <div style= "padding-top: 3px;">
       Liming Zhan*, <strong>Bo Liu*</strong>, Lu Fan, Jiaxin Chen, and Xiaoming Wu
-      <br>
+    </div>
+    <div style= "padding-top: 3px;">
       ACM International Conference on Multimedia. <strong> ACM MM 2020 </strong>
       <br>
       [<a href="assets/papers/ACM-2020-CR.pdf">PDF</a>] [<a href="https://github.com/Awenbocc/med-vqa">Code</a>] 
-  </div>
-  </div>
+    </div>   
+</div>
+</div>
 
 
 
