--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,66 +1,106 @@
+<style>	
+    .table {
+      display: table;
+      table-layout: fixed;
+    }
+    .table-cell {
+      display: table-cell;
+      text-align: center;
+      vertical-align: middle;
+    }
+</style>
 
-<div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-        <img src="/assets/img/med-vqa-system.png" height="130" width="200" alt="">
+
+<div class = "table">
+    <div class="table-cell" width="200px" >
+        <img src="/assets/img/med-vqa-system.png" alt="" style="max-width:200px;">
     </div>
-    <div style="padding-left: 10em ;">
-        <strong>Medical Visual Question Answering System for Intern Self-Training
-        </strong> 
-        <br>
-        Advisor: Xiaoming Wu | The Hong Kong Polytechnic University | Apr. 2021 - May 2021
-        <br>
-        [<a href="https://www.med-vqa.com">Code</a>] <i style="color:#e74d3c">PyQT5 Application</i>
-    </div>
-</div>
-
-
-
-
-
-<div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-        <img src="/assets/img/deepcell.png" height="130" width="200" alt="">
-    </div>
-    <div style="padding-left: 10em ;">
-        <strong>DeepCell: Automatic Segmentation System for Pathological Whole Slide Images
-        </strong> 
-        <br>
-        Advisor: Yi Zhang | Sichuan University | Mar. 2019 - Jun. 2019
-        <br>
-        [<a href="https://www.med-vqa.com">Code</a>] <i style="color:#e74d3c">QT5 Application</i>
-    </div>
-</div>
-
-
-
-<div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-    <img src="/assets/img/bank.png" height="130" width="200" alt="">
-    </div>
-    <div style="padding-left: 10em ;">
-    <strong>Predicting Term Deposit Subscriptions by exploring Bank Marketing Dataset
-    </strong> 
-    <br>
-    Winter Training Camp| University of California, Berkeley | Dec. 2018 - Jan. 2019
-    <br>
-    [<a href="https://www.med-vqa.com">Code</a>] 
+    <div style="padding-left: 1em ;">
+        <div>
+            <strong>Medical Visual Question Answering System for Self-Training</strong> 
+        </div>
+        <div style= "padding-top: 3px;">
+            Advisor: Xiaoming Wu | The Hong Kong Polytechnic University | Apr. 2021 - May 2021
+        </div>
+        <div style="padding-top: 3px;">
+            Medical visual question answering has enormous potential in assisted diagnosis and education. Thus, I design 
+            a practical system to help intern doctors or even common people do self-training: they can upload or 
+            choose a radiology image and ask some questions about it, the system could feedback an answer as a reference. 
+            <br>
+            [<a href="https://www.med-vqa.com">Code</a>] <i style="color:#e74d3c">PyQT5 Application</i>
+        </div>
     </div>
 </div>
 
 
 
 
-<div style="clear: both;">
-    <div style="float: left; margin-right: 1em;">
-        <img src="/assets/img/mini.png" height="130" width="200" alt="">
+
+<div div class="table" style="padding-top: 15px;">
+    <div class="table-cell" width="200px">
+        <img src="/assets/img/deepcell.png" alt="" style="max-width:200px;">
     </div>
-    <div style="padding-left: 10em ;">
-        <strong>Crop Disease Classification Based on Deep Learning
-        </strong> 
-        <br>
-        Advisor: Yi Zhang | Sichuan University | Oct. 2018 - May 2019
-        <br>
-        [<a href="https://www.med-vqa.com">Code</a>] <i style="color:#e74d3c">WeChat Mini Program</i>
+    <div style="padding-left: 1em ;">
+        <div>
+            <strong>DeepCell: Automatic Segmentation System for Pathological Whole Slide Images</strong> 
+        </div>
+        <div style="padding-top: 3px;">
+            Advisor: Yi Zhang | Sichuan University | Mar. 2019 - Jun. 2019
+        </div>
+        <div style="padding-top: 3px;">
+            The morphological clues of various cancer cells are very important for pathologists to determine the stage of cancer, making 
+            the segmentation of pathological whole slide images necessary. Based on ASAP system used for opening WSI image, I add the automatic 
+            segentation module and report generation module. 
+            <br>
+            [<a href="https://github.com/Bo-L/pathology-image-process-system">Code</a>] <i style="color:#e74d3c">QT5 Application</i>
+        </div>
+    </div>
+</div>
+
+
+
+<div div class="table" style="padding-top: 15px;">
+    <div class="table-cell" width="200px">
+        <img src="/assets/img/bank.png" alt="" style="max-width:200px;">
+    </div>
+    <div style="padding-left: 1em ;">
+        <div>
+            <strong>Predicting Term Deposit Subscriptions by exploring Bank Marketing Dataset</strong> 
+        </div>
+        <div style="padding-top: 3px;">
+            Winter Training Camp| University of California, Berkeley | Dec. 2018 - Jan. 2019
+        </div>
+        <div style="padding-top: 3px;">
+            When given 50 attributes of a person such as age, how can the financial institution have greater effectiveness to determine if he/she will deposit? 
+            In this project, I investigate the relationship between different attributes and then do binary classification by utilizing classical machine learning 
+            algorithms like Logistic Regression, kNN, and Random Forest.
+            <br>
+            [<a href="https://github.com/Bo-L/UCI-Bank-Marketing-Data-Set">Code</a>] 
+        </div>
+    </div>
+</div>
+
+
+
+
+<div div class="table" style="padding-top: 15px;">
+    <div class="table-cell" width="200px">
+        <img src="/assets/img/mini.png" alt="" style="max-width:200px;">
+    </div>
+    <div style="padding-left: 1em ;">
+        <div>
+            <strong>Crop Disease Classification Based on Deep Learning</strong>
+        </div>
+        <div style="padding-top: 3px;">
+            Advisor: Yi Zhang | Sichuan University | Oct. 2018 - May 2019
+        </div>
+        <div style="padding-top: 3px;">
+            Crop disease classification system could help farmers find the fatal diseases as soon as possible. To this end, I design a c/s structure application: 
+            (1) in client: user could upload photos through developed WeChat Mini Program; (2) in server: pre-trained ResNet50-v2 model will recongnize the type of crop disease, and then feedback 
+            the result through Django Framework.
+            <br>
+            [<a href="https://github.com/Bo-L/Crop-Recognition-Application">Code</a>] <i style="color:#e74d3c">WeChat Mini Program</i>
+        </div>
     </div>
 </div>
 
