--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <head>
-    <title>{{ site.title }} | {{site.affiliation}}</title>
+    <title>{{ site.title }}}</title>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
