--- a/_includes/project.html
+++ b/_includes/project.html
@@ -27,7 +27,7 @@
             a practical system to help intern doctors or even common people do self-training: they can upload or 
             choose a radiology image and ask some questions about it, the system could feedback an answer as a reference. 
             <br>
-            [<a href="https://www.med-vqa.com">Code</a>] <i style="color:#e74d3c">PyQT5 Application</i>
+            [<a href="https://github.com/Awenbocc/mvqa-system">Code</a>] <i style="color:#e74d3c">PyQT5 Application</i>
         </div>
     </div>
 </div>
@@ -52,7 +52,7 @@
             the segmentation of pathological whole slide images necessary. Based on ASAP system used for opening WSI image, I add the automatic 
             segentation module and report generation module. 
             <br>
-            [<a href="https://github.com/Bo-L/pathology-image-process-system">Code</a>] <i style="color:#e74d3c">QT5 Application</i>
+            [<a href="https://github.com/Awenbocc/pathology-image-process-system">Code</a>] <i style="color:#e74d3c">QT5 Application</i>
         </div>
     </div>
 </div>
@@ -75,7 +75,7 @@
             In this project, I investigate the relationship between different attributes and then do binary classification by utilizing classical machine learning 
             algorithms like Logistic Regression, kNN, and Random Forest.
             <br>
-            [<a href="https://github.com/Bo-L/UCI-Bank-Marketing-Data-Set">Code</a>] 
+            [<a href="https://github.com/Awenbocc/UCI-Bank-Marketing-Data-Set">Code</a>] 
         </div>
     </div>
 </div>
@@ -99,7 +99,7 @@
             (1) in client: user could upload photos through developed WeChat Mini Program; (2) in server: pre-trained ResNet50-v2 model will recongnize the type of crop disease, and then feedback 
             the result through Django Framework.
             <br>
-            [<a href="https://github.com/Bo-L/Crop-Recognition-Application">Code</a>] <i style="color:#e74d3c">WeChat Mini Program</i>
+            [<a href="https://github.com/Awenbocc/Crop-Recognition-Application">Code</a>] <i style="color:#e74d3c">WeChat Mini Program</i>
         </div>
     </div>
 </div>
