--- a/_includes/research.html
+++ b/_includes/research.html
@@ -28,7 +28,7 @@
             to pre-train a cross-modal BERT with external image-text data for downstream tasks in the medical domain: 
             (1) Visual question answering; (2) Image-Text retrieval; (3) Image caption generation
             <br>
-            [Code] 
+            [Code]
         </div>
     </div>
 </div>
@@ -49,7 +49,7 @@
             relations to be utilized. To meet the need for practical usage, I design a simple but domain-specific medical knowledge graph, which contains 
             organ, body system, organ-related diseases, and knowledge about disease such as symptoms or causes. 
             <br>
-            [<a>Data</a>] [<a>System</a>] <i style="color:#e74d3c">Neo4j Database</i>
+            [<a href="https://www.med-vqa.com/slake/#more">Data</a>] [<a href="https://github.com/Awenbocc/mvqa-kg">System</a>] <i style="color:#e74d3c">Neo4j Database</i>
         </div>
     </div>
 </div>
@@ -72,7 +72,7 @@
             (containing a new labeling system<sup>4</sup>);
             (2) Enhancing reasoning ability of model<sup>2</sup>; (3) Designing a new pre-training framework for visual feature extractor<sup>3</sup>
             <br>
-            [<a>PDF<sup>1</sup></a>], [<a>PDF<sup>2</sup></a>], [<a>PDF<sup>3</sup></a>], [<a>Code<sup>4</sup></a>] <i style="color:#e74d3c">PyQT5 Application</i>
+            [<a href="assets/papers/ISBI-2021-SLAKE.pdf">PDF<sup>1</sup></a>], [<a href="assets/papers/ACM-2020-CR.pdf">PDF<sup>2</sup></a>], [<a>PDF<sup>3</sup> </a>], [<a href="https://github.com/Awenbocc/mvqa-qgs">Code<sup>4</sup></a>] <i style="color:#e74d3c">PyQT5 Application</i>
         </div>
     </div>
 </div>
@@ -97,7 +97,7 @@
             named Attention Dual-Path U-Net (ADPU), which incorporates dual-path network and attention mechanism into U-Net and achieves 
             state-of-the-art results in fewer parameters.
             <br>
-            [<a>PDF</a>] [<a>Code</a>] 
+           [<a>Code</a>] 
         </div>   
     </div>
 </div>
@@ -119,7 +119,7 @@
             use the ImageNet dataset (except plant) to imitate the anomaly distribution and original plant dataset as the normal distribution, and  
             train an additional model to do two-way classification, helping plant network refuse non-plant image. 
             <br>
-            [<a>PDF</a>] [<a>Code</a>]
+            [Code]
         </div>
     </div>
 </div>
